linux_makefile_function

--- a/gcc/Makefile
+++ b/gcc/Makefile
@@ -1,11 +1,11 @@
 main:mytool1.o mytool2.o main.o
-	gcc mytool1.o mytool2.o main.o -o main
+	gcc function/mytool1.o function/mytool2.o main.o -o main
 
 main.o:main.c
-	gcc -c main.c -o main.o
+	gcc -c main.c -o main.o -Ifunction
 
-mytool1.o:mytool1.c
-	gcc -c mytool1.c -o mytool1.o
+mytool1.o:function/mytool1.c
+	gcc -c function/mytool1.c -o function/mytool1.o
 
-mytool2.o:mytool2.c
-	gcc -c mytool2.c -o mytool2.o
+mytool2.o:function/mytool2.c 
+	gcc -c function/mytool2.c -o function/mytool2.o
